--- a/index.html
+++ b/index.html
@@ -4,63 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerar QR Code</title>
-    <style>
-        /* Estilos gerais */
-        body {
-            background-color: #F4C27F;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-            position: relative;
-        }
-
-        
-        .logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 250px;
-        }
-
-        /* Texto central */
-        h1 {
-            font-size: 22px;
-            color: black;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        /* Botão estilizado */
-        .botao {
-            background-color: white;
-            border: 2px solid black;
-            padding: 10px 20px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-
-        /* Efeito hover no botão */
-        .botao:hover {
-            background-color: lightgray;
-        }
-
-        /* Área onde o QR code será gerado */
-        #qrcode {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <!-- Incluindo a biblioteca QRCode.js -->
     <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
 </head>
 <body>
 
     <!-- Logo -->
-    <img src="./Imagens_robo/carmel_cumbuco-removebg-preview.png" alt="Carmel Cumbuco Resort" class="logo">
+    <img src="Imagens_robo/carmel_cumbuco-removebg-preview.png" alt="Carmel Cumbuco Resort" class="logo">
 
     <!-- Texto -->
     <h1>Clique aqui 👇😊</h1>
@@ -70,21 +21,77 @@
     <br>
     <img id="qrcode" style="display: none; margin-top: 20px;">
 
-    <script>
-        document.getElementById("gerarQrCodeBtn").addEventListener("click", function() {
-            fetch('http://localhost:3000/qrcode')
+    <div id="result"></div>
+    <button id="notificacoesBtn">🔔 Notificações</button>
+    <div id="notificacoesContainer"></div>
+
+<script>
+    const btnNotificacoes = document.getElementById("notificacoesBtn")
+    const container = document.getElementById("notificacoesContainer")
+    btnNotificacoes.addEventListener("click", () => {
+        if (container.style.display === "none") {
+            fetch("http://localhost:3000/notificacoes")
                 .then(response => response.json())
                 .then(data => {
-                    if (data.qr) {
-                        const qrImg = document.getElementById("qrcode");
-                        qrImg.src = data.qr;
-                        qrImg.style.display = "block"; // Mostrar a imagem
+                    if (data.length === 0) {
+                        container.innerHTML = "<p>Sem notificações no momento.</p>";
                     } else {
-                        alert("QR Code ainda não gerado.");
+                        container.innerHTML = data.map(item => `
+                            <div style="margin-bottom: 10px;">
+                                <strong>Quarto:</strong> ${item.quarto}<br>
+                                <strong>Tipo:</strong> ${item.tipo}<br>
+                                <strong>Mensagem:</strong> ${item.mensagem}
+                            </div>
+                        `).join("");
                     }
-                })
-                .catch(error => console.error("Erro ao buscar QR Code:", error));
-        });
-    </script>
+                    container.style.display = "block";
+                });
+        } else {
+            container.style.display = "none";
+        }
+    });
+    let conectadoAnteriormente = false;
+    function verificarStatus() {
+        fetch('http://localhost:3000/status')
+            .then(response => response.json())
+            .then(data => {
+                if (data.conectado) {
+                    const result = document.getElementById('result')
+                    document.getElementById('result').textContent = '✅ Conectado';
+                    result.classList.add('verde')
+                    if (!conectadoAnteriormente) {
+                        document.getElementById('connectSound')?.play();
+                        conectadoAnteriormente = true;
+                }   }
+                else {
+                    const result = document.getElementById('result')
+                    document.getElementById('result').textContent = '⏳ Aguardando conexão...';
+                    result.classList.remove('verde')
+                    conectadoAnteriormente = false
+                }
+            })
+            .catch(err => console.error("Erro ao verificar status:", err));
+    }
+    verificarStatus();
+    setInterval(verificarStatus, 5000);
+
+    // Código do botão
+    document.getElementById("gerarQrCodeBtn").addEventListener("click", function() {
+        fetch('http://localhost:3000/qrcode')
+            .then(response => response.json())
+            .then(data => {
+                if (data.qr) {
+                    const qrImg = document.getElementById("qrcode");
+                    qrImg.src = data.qr;
+                    qrImg.style.display = "block";
+                }
+                else {
+                        alert("QR Code ainda não gerado.");
+                }
+            })
+            .catch(error => console.error("Erro ao buscar QR Code:", error));
+    });
+</script>
+<audio id="connectSound" src="mixkit-happy-bells-notification-937.wav" preload="auto"></audio>
 </body>
 </html>
